--- a/Assets/UI/GameUI.uxml
+++ b/Assets/UI/GameUI.uxml
@@ -1,15 +1,16 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <engine:Template name="AnswerCard" src="project://database/Assets/UI/AnswerCard.uxml?fileID=9197481963319205126&amp;guid=10eaa5da8a16faf498f5a8536f5a2256&amp;type=3#AnswerCard" />
     <Style src="project://database/Assets/UI/GameUI.uss?fileID=7433441132597879392&amp;guid=79ff29fd15631f743956d4ad5a9aebfb&amp;type=3#GameUI" />
-    <engine:VisualElement name="Body" style="flex-grow: 1;">
+    <engine:VisualElement name="Body" class="NextTarget" style="flex-grow: 1;">
         <engine:VisualElement name="Header" style="flex-grow: 1; height: auto; max-height: 10%; flex-direction: row; justify-content: space-between;">
             <engine:Label text="3" name="Life" style="max-height: 100%; flex-direction: row-reverse; align-self: center; font-size: 50%; -unity-text-align: middle-left;" />
             <engine:Label text="3.00" name="Time" style="max-height: 100%; flex-direction: row-reverse; font-size: 50%; align-self: center; -unity-text-align: middle-left;" />
         </engine:VisualElement>
         <engine:VisualElement name="Spacer" style="flex-grow: 1;" />
         <engine:VisualElement name="Footer" style="flex-grow: 1; height: auto; max-height: 15%; flex-direction: row; justify-content: center; -unity-text-align: upper-left; align-items: stretch; align-self: auto; align-content: flex-start; top: auto; flex-shrink: 1;">
-            <engine:Instance template="AnswerCard" name="Target" style="max-width: none;" />
+            <engine:Instance template="AnswerCard" name="Target" class="TargetContainer" style="max-width: none;" />
             <engine:Label text="には" name="Niha" style="max-height: 100%; flex-direction: row; font-size: 50%; align-self: center; justify-content: flex-start; align-items: stretch; -unity-text-align: middle-left;" />
+            <engine:Label text="には？" name="NihaQ" style="max-height: 100%; flex-direction: row; font-size: 50%; align-self: center; justify-content: flex-start; align-items: stretch; -unity-text-align: middle-left;" />
             <engine:VisualElement name="Answers" style="flex-grow: 0; flex-shrink: 0; flex-direction: row; width: auto; align-content: center; justify-content: flex-start; flex-wrap: nowrap; -unity-text-align: middle-center; white-space: normal;">
                 <engine:VisualElement name="AnswerCards" style="flex-grow: 0; flex-shrink: 0; flex-direction: row; width: auto; align-content: center; justify-content: flex-start; flex-wrap: nowrap; -unity-text-align: middle-center; white-space: normal;">
                     <engine:Instance template="AnswerCard" style="flex-grow: 0; width: auto;" />
@@ -17,14 +18,15 @@
                 <engine:Label text="を！" name="Wo" style="max-height: 100%; flex-direction: row; font-size: 50%; align-self: center; -unity-text-align: middle-left; white-space: nowrap; text-overflow: clip; align-content: flex-start; align-items: stretch; justify-content: flex-start; flex-grow: 0; flex-wrap: nowrap; -unity-font-style: normal;" />
             </engine:VisualElement>
         </engine:VisualElement>
-        <engine:VisualElement name="Next" style="flex-grow: 1; position: absolute; height: 100%; width: 100%; align-items: center; justify-content: center; align-self: center; align-content: center; flex-direction: row; display: none;">
-            <engine:Instance template="AnswerCard" name="Target" style="max-width: none; height: 40%; width: 40%;" />
-            <engine:Label text="には?" name="Niha" style="max-height: 100%; flex-direction: row; font-size: 100%; align-self: center; justify-content: flex-start; align-items: stretch; -unity-text-align: middle-left; max-width: none; text-overflow: clip; white-space: nowrap;" />
+        <engine:VisualElement name="Next" style="flex-grow: 1; position: absolute; height: 100%; width: 100%; align-items: center; justify-content: center; align-self: center; align-content: center; flex-direction: row;">
+            <engine:Instance template="AnswerCard" name="TargetNext" class="TargetContainer" style="max-width: none; height: 40%; width: auto; flex-shrink: 1; min-width: auto; min-height: auto; max-height: none;" />
+            <engine:Label text="には?" name="NextNiha" style="max-height: 100%; flex-direction: row; font-size: 30%; align-self: center; justify-content: flex-start; align-items: stretch; -unity-text-align: middle-left; max-width: none; text-overflow: clip; white-space: nowrap;" />
         </engine:VisualElement>
-        <engine:VisualElement name="End" style="flex-grow: 1; position: absolute; height: 100%; width: 100%;">
-            <engine:Label text="Game Over" style="-unity-text-align: lower-center; font-size: 150px; justify-content: flex-start; height: 50%;" />
-            <engine:VisualElement name="ButtonList" style="flex-grow: 0; flex-shrink: 1; width: 50%; max-width: 50%; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto;">
-                <engine:Button text="Restart" name="Restart" style="bottom: 30px;" />
+        <engine:VisualElement name="End" enabled="true" style="flex-grow: 1; position: absolute; height: 100%; width: 100%; background-color: rgba(0, 0, 0, 0.78);">
+            <engine:Label text="Game Over" style="-unity-text-align: lower-center; font-size: 150px; justify-content: flex-start; height: 50%; white-space: normal; margin-bottom: 5%; color: rgb(255, 0, 0);" />
+            <engine:VisualElement name="ButtonList" style="flex-grow: 0; flex-shrink: 1; width: 50%; max-width: 50%; margin-top: 0; margin-right: auto; margin-bottom: 0; margin-left: auto; height: 30%; justify-content: center; align-content: flex-start; align-self: auto; align-items: stretch; flex-direction: column;">
+                <engine:Button text="Restart" name="Restart" style="bottom: auto;" />
+                <engine:VisualElement style="flex-grow: 0; height: 25px;" />
                 <engine:Button text="Menue&#10;" name="Menue" />
             </engine:VisualElement>
         </engine:VisualElement>
